--- a/setup.cfg
+++ b/setup.cfg
@@ -71,5 +71,5 @@ ignore = E501 E741 E203 W503 W0212 W0622 R0915
 
 [rstcheck]
 ignore_substitutions = today, version
-ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass
+ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass, autoattribute, automethod, doctest
 ignore_messages = Error in "math" directive
