--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ addopts =
     --ignore="setup.py"
     --ignore="doc/conf.py"
 doctest_plus = enabled
-doctest_optionflags = ELLIPSIS
+doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
 doctest_plus_atol = 1e-03
 doctest_plus_rtol = 1e-03
 doctest_rst = enabled
