--- a/setup.cfg
+++ b/setup.cfg
@@ -53,9 +53,9 @@ addopts =
     --ignore="setup.py"
     --ignore="doc/conf.py"
 doctest_plus = enabled
-doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
+doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE FLOAT_CMP
 doctest_plus_atol = 1e-03
-doctest_plus_rtol = 1e-02
+doctest_plus_rtol = 1e-03
 doctest_rst = enabled
 norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
 pep8ignore = E402 W0212 W0622 R0915
