--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ install_requires =
     ndarray-listener>=1.1.2
     numpy-sugar>=1.2.5
     numpy>=1.14.3
-    optimix>=2.0.0
+    optimix<3>=2.0.2
     pandas>=0.23.1
     pytest>=3.6.3
     pytest-doctestplus>=0.1.3
