--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
     brent-search>=1.0.33
     cachetools>=2.1.0
     liknorm>=1.2.1
-    ndarray-listener>=1.1.2
+    ndarray-listener<2,>=1.1.2
     numpy-sugar>=1.2.5
     numpy>=1.14.3
     optimix<3>=2.0.2
