--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest pytest-doctestplus
+        pip install flake8 pytest pytest-doctestplus black isort
     - name: Lint with flake8
       run: |
         flake8 glimix_core
