--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,11 +26,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest pytest-doctestplus black isort
+        pip install flake8 pytest pytest-doctestplus black isort --upgrade
     - name: Lint with flake8
       run: |
         flake8 glimix_core
-        black glimix_core
+        black --check glimix_core
         isort --quiet --recursive --check-only glimix_core
     - name: Test with pytest
       run: |
