--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,11 +27,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest pytest-doctestplus black isort --upgrade
-    - name: Lint with flake8
+    - name: Lint
       run: |
         flake8 glimix_core
         black --check glimix_core
         isort --quiet --recursive --check-only glimix_core
-    - name: Test with pytest
+    - name: Test
       run: |
         python setup.py test
