--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         flake8 glimix_core
         black --check glimix_core
-        isort --quiet --recursive --check-only glimix_core
+        isort --recursive --check-only glimix_core
     - name: Test
       run: |
         python setup.py test
