--- a/setup.cfg
+++ b/setup.cfg
@@ -64,6 +64,7 @@ include_trailing_comma=True
 force_grid_wrap=0
 combine_as_imports=True
 line_length=88
+known_third_party=brent_search,numpy,numpy_sugar,optimix,pytest,scipy,setuptools,sphinx_rtd_theme,cachetools,liknorm,ndarray_listener,tqdm,statsmodels,pandas
 
 [pylint]
 disable = redefined-builtin,R0915
