--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,12 +26,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest pytest-doctestplus black isort --upgrade
+        pip install flake8 pytest pytest-doctestplus black isort setuptools
     - name: Lint
       run: |
         flake8 glimix_core
         black --check glimix_core
-        isort --version-number
         isort --recursive --check-only glimix_core
     - name: Test
       run: |
