--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,10 +7,11 @@ version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-   configuration: doc/conf.py
+    configuration: doc/conf.py
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: 3.7
-   install:
-   - requirements: doc/requirements.txt
+    version: 3.7
+    install:
+        - requirements: doc/requirements.txt
+    system_packages: true
