--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ version = attr: version.get
 zip_safe = True
 include_package_data = True
 packages = find:
+python_requires = >= 3.7
 setup_requires =
     pytest-runner>=5.2
 install_requires =
