Revamp CI workflows for release and testing 🚀
- Removed `deploy.yml`; integrated into `release.yml` for streamlined ops.
- Added `release.yml` for tag-based package release to PyPI using `uv`.
- Updated `test.yml`:
- Migrated to use `uv` for dependency management & testing.
- Ensured compatibility with modern OS support.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,26 +5,27 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Run image
-        uses: abatilo/actions-poetry@v4
-        with:
-          poetry-version: "latest"
 
       - name: install make
         run: choco install -y make
         if: runner.os == 'Windows'
 
-      - name: Run tests
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - name: "Set up Python"
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: "pyproject.toml"
+
+      - name: Test
         run: |
-          poetry install
-          poetry run pytest
+          uv sync --all-extras --dev
+          uv run pytest
